err/django-campaign.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/campaign'...
Listing './lib/python3.5/site-packages/campaign/backends'...
Compiling './lib/python3.5/site-packages/campaign/backends/__init__.py'...
***   File "./lib/python3.5/site-packages/campaign/backends/__init__.py", line 17
    except ImportError, e_user:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/campaign/backends/mandrill_api.py'...
***   File "./lib/python3.5/site-packages/campaign/backends/mandrill_api.py", line 118
    except mandrill.Error, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/campaign/context.py'...
***   File "./lib/python3.5/site-packages/campaign/context.py", line 19
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/campaign/fields.py'...
***   File "./lib/python3.5/site-packages/campaign/fields.py", line 25
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/campaign/management'...
Listing './lib/python3.5/site-packages/campaign/management/commands'...
Compiling './lib/python3.5/site-packages/campaign/management/commands/fetch_mandrill_rejects.py'...
***   File "./lib/python3.5/site-packages/campaign/management/commands/fetch_mandrill_rejects.py", line 40
    except mandrill.Error, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/campaign/migrations'...
Listing './lib/python3.5/site-packages/campaign/templates'...
Listing './lib/python3.5/site-packages/campaign/templates/admin'...
Listing './lib/python3.5/site-packages/campaign/templates/admin/campaign'...
Listing './lib/python3.5/site-packages/campaign/templates/admin/campaign/campaign'...
Listing './lib/python3.5/site-packages/campaign/templates/campaign'...
Listing './lib/python3.5/site-packages/django_campaign-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
